--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "connect-session-sequelize": "^6.1.1",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
+    "faker": "^5.1.0",
     "history": "^4.10.1",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
@@ -57,11 +58,13 @@
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sequelize": "^5.22.3",
-    "socket.io": "^2.3.0"
+    "socket.io": "^2.3.0",
+    "toastify-js": "^1.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
